force-app/main/default/objects/VCC_Site_Specific_Configuration__mdt/fields/VCC_SiteID__c.field-meta.xml
<CustomField>
    <fullName>VCC_SiteID__c</fullName>
    <description>VistA SiteID</description>
    <label>SiteID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>