force-app/main/default/objects/VCC_Site_Specific_Configuration__mdt/fields/VCC_VISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_VISN__c</fullName>
    <description>VISN Number</description>
    <label>VISN</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>