force-app/main/default/objects/VCC_Site_Specific_Configuration__mdt/fields/VCC_VistA_Environment__c.field-meta.xml
<CustomField>
    <fullName>VCC_VistA_Environment__c</fullName>
    <description>VCC Org Settings related Org ID Type</description>
    <label>VistA Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRODUCTION</fullName>
            </value>
            <value>
                <fullName>Pre-Production</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Dev</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>