force-app/main/default/objects/VCC_Site_Specific_Configuration__mdt/fields/VCC_VistA_Integration__c.field-meta.xml
<CustomField>
    <fullName>VCC_VistA_Integration__c</fullName>
    <description>Integration service used for the signing of Progress Notes to VistA.</description>
    <inlineHelpText>Integration service used for the signing of Progress Notes to VistA.</inlineHelpText>
    <label>VistA Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VDIF</fullName>
                <default>true</default>
                <label>VDIF</label>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>